[package]
name = "libetpan"
version = "0.1.0"
authors = ["Kavan Mevada <kavanmevada@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libetpan-sys = { path = "../libetpan-sys" }

# Used to trigger the `audit-check` Action (non-informational advisory)
rustsec-example-crate = "=0.0.1"
